# FlappyBird

./: .gitignore  CMakeLists.txt
src/: Bird.cpp  Bird.h  Collision.cpp  Collision.h  Constants.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  MovingObject.cpp  MovingObject.h  Pipe.cpp  Pipe.h  Player.cpp  Player.h  Score.cpp  Score.h  Sprite.cpp  Sprite.h  TextureManager.cpp  TextureManager.h  Vector2.h  main.cpp
